--- a/src/pages/Homepage/Homepage.css
+++ b/src/pages/Homepage/Homepage.css
@@ -46,6 +46,10 @@
     .product-grid-container {
         grid-template-columns: repeat(2, 1fr)
     }
+
+    .filter-container {
+        width: 95%;
+    }
   }
 
   @media (max-width: 754px) {
@@ -59,11 +63,6 @@
         margin-left: 20%;
     }
 
-    .homepage-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
 
     .filter-container button {
        margin-bottom: 15px;
